# llm-sdg-disagreement

./: .gitignore  LICENSE  README.md  main.py  matplotlibrc  pyproject.toml
notebooks/: 01_clean_merge.ipynb  02_agreement_analysis.ipynb  03_disagreement_analysis.ipynb
scripts/: analyze_disagreement_scores.py
